[package]
name = "p2p-swap-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "~1.14"
solana-client = "~1.14"
solana-cli-config = "~1.14"
solana-clap-utils = "~1.14"
solana-account-decoder = "~1.14"
spl-token = { version = "~3.5", default_features = false, features = ["no-entrypoint"] }
spl-associated-token-account = { version = "~1.1", default_features = false, features = ["no-entrypoint"] }
clap = "2.33.3"
log = "0.4.17"
rand = "0.8.5"
p2p-swap = { path = "../program/", features=["no-entrypoint"] }
ed25519-dalek = "1.0.1"
bytemuck = "1.13.1"